--- a/Vostok.Metrics.System.Tests/Vostok.Metrics.System.Tests.csproj
+++ b/Vostok.Metrics.System.Tests/Vostok.Metrics.System.Tests.csproj
@@ -4,8 +4,7 @@
   <Import Project="..\..\vostok.devtools\git-commit-to-assembly-title\Vostok.Tools.GitCommit2AssemblyTitle.props" />
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp3.1;net471</TargetFrameworks>
-    <TargetFrameworks Condition="'$(OS)' != 'Windows_NT'">netcoreapp3.1</TargetFrameworks>
+    <TargetFrameworks>netcoreapp3.1</TargetFrameworks>
     <LangVersion>7.2</LangVersion>
   </PropertyGroup>
 
