GarbageCollectionMonitor: improvements and a couple of simple tests.

--- a/Vostok.Metrics.System.Tests/Vostok.Metrics.System.Tests.csproj
+++ b/Vostok.Metrics.System.Tests/Vostok.Metrics.System.Tests.csproj
@@ -20,6 +20,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Include="..\..\vostok.commons.testing\Vostok.Commons.Testing\AssertionAssertions.cs" Link="Commons\AssertionAssertions.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Vostok.Metrics.System\Vostok.Metrics.System.csproj" />
   </ItemGroup>
 
