--- a/module.yaml
+++ b/module.yaml
@@ -14,6 +14,7 @@ notests *default:
     - vostok.commons.time/src
     - vostok.devtools
     - vostok.logging.abstractions
+    - vostok.metrics
 
 full-build > notests:
   build:
