--- a/Vostok.Metrics.System/Vostok.Metrics.System.csproj
+++ b/Vostok.Metrics.System/Vostok.Metrics.System.csproj
@@ -6,6 +6,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <Configurations>Debug;Release</Configurations>
     <LangVersion>7.2</LangVersion>
+    <PackageVersion>0.2.0</PackageVersion>
   </PropertyGroup>
   <PropertyGroup>
     <VersionPrefix>0.1.4</VersionPrefix>
