Marked IntendedTreeParser as obsolete. Imported Newtonsoft.Json

--- a/Vostok.Metrics.System/Vostok.Metrics.System.csproj
+++ b/Vostok.Metrics.System/Vostok.Metrics.System.csproj
@@ -41,4 +41,21 @@
       <HintPath>..\..\vostok.sys.metrics.perfcounters\Vostok.Sys.Metrics.PerfCounters\bin\Release\netstandard2.0\Vostok.Sys.Metrics.PerfCounters.dll</HintPath>
     </Reference>
   </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
+  
+  <Target Name="RepackAssemblies" AfterTargets="Build" Condition="'$(Configuration)' == 'Release'">
+    <PropertyGroup>
+      <ILRepackExecutable>dotnet "$(MSBuildThisFileDirectory)../../vostok.devtools.ilrepack.bin/netcoreapp2.1/ILRepack.Core.dll"</ILRepackExecutable>
+      <BinPath>$(ProjectDir)$(OutputPath)</BinPath>
+      <ResultAssembly>$(BinPath)$(AssemblyName).dll</ResultAssembly>
+    </PropertyGroup>
+    <ItemGroup>
+      <MergeAssemblies Include="$(BinPath)Newtonsoft.Json.dll" />
+    </ItemGroup>
+    <Exec WorkingDirectory="$(BinPath)" Command="$(ILRepackExecutable) /internalize /renameInternalized /out:$(ResultAssembly) $(ResultAssembly) @(MergeAssemblies->'%(RelativeDir)%(FileName)%(Extension)', ' ')" />
+    <Delete Files="@(MergeAssemblies)"/>
+  </Target>
 </Project>
