--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,16 @@ jobs:
         uses: actions/checkout@main
         with:
           path: vostok.module
+          
+      - name: Install .NET Core 2.1
+        uses: actions/setup-dotnet@main
+        with:
+          dotnet-version: '2.1.x'
+
+      - name: Install .NET 6.0
+        uses: actions/setup-dotnet@main
+        with:
+          dotnet-version: '6.0.x'
         
       - name: Build
         uses: vostok/github.ci@master
@@ -36,6 +46,21 @@ jobs:
     runs-on: ${{ matrix.os }}
    
     steps:
+      - name: Install .NET Core 3.1
+        uses: actions/setup-dotnet@main
+        with:
+          dotnet-version: '3.1.x'
+
+      - name: Install .NET 5.0
+        uses: actions/setup-dotnet@main
+        with:
+          dotnet-version: '5.0.x'
+
+      - name: Install .NET 6.0
+        uses: actions/setup-dotnet@main
+        with:
+          dotnet-version: '6.0.x'
+
       - name: Test
         uses: vostok/github.ci@master
         with:
