--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,7 @@ jobs:
       matrix:
         os: [windows-latest, ubuntu-latest]
         references: [cement, nuget]
-        framework: [netcoreapp2.1, net471]
+        framework: [net6.0, net5.0, netcoreapp3.1, netcoreapp2.1, net471]
         exclude: 
           - os: ubuntu-latest
             framework: net471
