--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
     needs: build
     uses: vostok/github.ci/.github/workflows/test.yml@master
     with:
-      frameworks: '["net6.0", "net5.0", "netcoreapp3.1", "netstandard2.0"]'
+      frameworks: '["net6.0", "net5.0", "netcoreapp3.1", "netcoreapp2.1", "net471"]'
 
   publish:
     needs: test
