use vostok.devtools@with-net6.0 dep for full-build

--- a/module.yaml
+++ b/module.yaml
@@ -24,5 +24,7 @@ full-build > notests:
     configuration: Release
 
   deps:
+    - -vostok.devtools
+    - vostok.devtools@with-net6.0
     - vostok.commons.testing
     - vostok.logging.console
