--- a/Vostok.Metrics.System.Tests/Vostok.Metrics.System.Tests.csproj
+++ b/Vostok.Metrics.System.Tests/Vostok.Metrics.System.Tests.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="5.10.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="NSubstitute" Version="4.2.1" />
   </ItemGroup>
   <ItemGroup>
